--- a/Desktop/EcuaprestApp/templates/partials/_sidebar.html
+++ b/Desktop/EcuaprestApp/templates/partials/_sidebar.html
@@ -79,7 +79,7 @@
             </a>
             <div class="collapse" id="auth">
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>
+                <li class="nav-item"> <a class="nav-link" href="templates/login.html"> Iniciar Sesión </a></li>
               </ul>
             </div>
           </li>
