--- a/Desktop/EcuaprestApp/templates/login.html
+++ b/Desktop/EcuaprestApp/templates/login.html
@@ -32,8 +32,8 @@
               <div class="brand-logo">
                 <img src="static/images/logo.svg" alt="logo">
               </div>
-              <h4>Hello! let's get started</h4>
-              <h6 class="fw-light">Sign in to continue.</h6>
+              <h4>Hola!!. Comenzemos</h4>
+              <h6 class="fw-light">Inicia sesión para iniciar.</h6>
               <!-- AQUI LOS MENSAJES FLASH -->
               {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
@@ -47,30 +47,21 @@
               {% endwith %}
               <form class="pt-3" method="POST" action="{{ url_for('login') }}">
                 <div class="form-group">
-                  <input type="input" class="form-control form-control-lg" name="username" placeholder="Username">
+                  <input type="input" class="form-control form-control-lg" name="username" placeholder="Usuario">
                 </div>
                 <div class="form-group">
-                  <input type="password" class="form-control form-control-lg" name="password" placeholder="Password">
+                  <input type="password" class="form-control form-control-lg" name="password" placeholder="Contraseña">
                 </div>
                 <div class="mt-3">
-                  <button type="submit" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">SIGN IN</button>
+                  <button type="submit" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">Ingresar</button>
                 </div>
                 <div class="my-2 d-flex justify-content-between align-items-center">
                   <div class="form-check">
                     <label class="form-check-label text-muted">
                       <input type="checkbox" class="form-check-input">
-                      Keep me signed in
+                      Mantenerme conectado
                     </label>
                   </div>
-                  <a href="#" class="auth-link text-black">Forgot password?</a>
-                </div>
-                <div class="mb-2">
-                  <button type="button" class="btn btn-block btn-facebook auth-form-btn">
-                    <i class="ti-facebook me-2"></i>Connect using facebook
-                  </button>
-                </div>
-                <div class="text-center mt-4 fw-light">
-                  Don't have an account? <a href="register.html" class="text-primary">Create</a>
                 </div>
               </form>
             </div>
