--- a/Desktop/EcuaprestApp/templates/base.html
+++ b/Desktop/EcuaprestApp/templates/base.html
@@ -111,18 +111,20 @@
           </li>
           <li class="nav-item dropdown d-none d-lg-block user-dropdown">
             <a class="nav-link" id="UserDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-              <img class="img-xs rounded-circle" src="images/faces/face8.jpg" alt="Profile image"> </a>
+              <img class="img-xs rounded-circle" src="https://www.w3schools.com/howto/img_avatar.png" alt="Profile image"> </a>
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="UserDropdown">
               <div class="dropdown-header text-center">
-                <img class="img-md rounded-circle" src="images/faces/face8.jpg" alt="Profile image">
-                <p class="mb-1 mt-3 font-weight-semibold">Allen Moreno</p>
-                <p class="fw-light text-muted mb-0">allenmoreno@gmail.com</p>
+                <img class="img-md rounded-circle" src="https://www.w3schools.com/howto/img_avatar.png" alt="Imagen de perfil" >
+                {% if session['admin_nombre'] and session['admin_correo'] %}
+                <p class="mb-1 mt-3 font-weight-semibold">{{session['admin_nombre']}}</p>
+                <p class="fw-light text-muted mb-0">{{session['admin_correo']}}</p>
+                {% endif %}
               </div>
               <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-account-outline text-primary me-2"></i> Mi
                 Perfil <span class="badge badge-pill badge-danger">1</span></a>
               <a class="dropdown-item"><i
                   class="dropdown-item-icon mdi mdi-calendar-check-outline text-primary me-2"></i> Actividades</a>
-              <a class="dropdown-item" href="{{ url_for('login') }} "><i
+              <a class="dropdown-item" href="{{ url_for('logout') }} "><i
                   class="dropdown-item-icon mdi mdi-power text-primary me-2"></i>Cerrar Sesión</a>
             </div>
           </li>
