--- a/Desktop/EcuaprestApp/templates/index.html
+++ b/Desktop/EcuaprestApp/templates/index.html
@@ -151,7 +151,7 @@
                                   <div class="modal fade" id="modalAñadirCliente" tabindex="-1"
                                     aria-labelledby="modalClienteLabel" aria-hidden="true">
                                     <div class="modal-dialog">
-                                      <form action="{{ url_for('añadir_cliente') }}" method="POST">
+                                      <form action="{{ url_for('añadir_cliente') }}" method="POST" enctype="multipart/form-data">
                                         <div class="modal-content">
                                           <div class="modal-header">
                                             <h5 class="modal-title" id="modalClienteLabel">Añadir Nuevo Cliente</h5>
@@ -166,6 +166,10 @@
                                             <div class="mb-3">
                                               <label for="cedula" class="form-label">Cédula</label>
                                               <input type="text" class="form-control" name="cedula" required>
+                                            </div>
+                                            <div class="mb-3">
+                                              <label for="cedula" class="form-label">Pdf con cédula y papel de votacion</label>
+                                              <input type="file" name="archivo" accept="application/pdf" required>
                                             </div>
                                             <div class="mb-3">
                                               <label for="numero_cuenta"
@@ -205,17 +209,10 @@
                                   <table class="table select-table">
                                     <thead>
                                       <tr>
-                                        <th>
-                                          <div class="form-check form-check-flat mt-0">
-                                            <label class="form-check-label">
-                                              <input type="checkbox" class="form-check-input" aria-checked="false"><i
-                                                class="input-helper"></i></label>
-                                          </div>
-                                        </th>
                                         <th>Cliente</th>
-                                        <th>Company</th>
-                                        <th>Progress</th>
-                                        <th>Status</th>
+                                        <th>Cedula</th>
+                                        <th>Numero de Cuenta</th>
+                                        <th>Estado</th>
                                         <th>Accion</th>
                                       </tr>
                                     </thead>
@@ -223,40 +220,22 @@
                                     {% for cliente in clientes %}
                                       <tr>
                                         <td>
-                                          <div class="form-check form-check-flat mt-0">
-                                            <label class="form-check-label">
-                                              <input type="checkbox" class="form-check-input" aria-checked="false"><i
-                                                class="input-helper"></i></label>
-                                          </div>
-                                        </td>
-                                        <td>
                                           <div class="d-flex ">
-                                            <img src="images/faces/face1.jpg" alt="">
                                             <div>
                                               <h6>{{ cliente.name }}</h6>
-                                              <p>Head admin</p>
                                             </div>
                                           </div>
                                         </td>
                                         <td>
-                                          <h6>Company name 1</h6>
-                                          <p>company type</p>
+                                          <h6>{{ cliente.cedula }}</h6>
                                         </td>
                                         <td>
                                           <div>
-                                            <div
-                                              class="d-flex justify-content-between align-items-center mb-1 max-width-progress-wrap">
-                                              <p class="text-success">79%</p>
-                                              <p>85/162</p>
-                                            </div>
-                                            <div class="progress progress-md">
-                                              <div class="progress-bar bg-success" role="progressbar" style="width: 85%"
-                                                aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                            </div>
+                                            <h6>{{ cliente.numero_cuenta }}</h6>
                                           </div>
                                         </td>
                                         <td>
-                                          <div class="badge badge-opacity-warning">In progress</div>
+                                          <div class="badge badge-opacity-warning">En curso</div>
                                         </td>
                                         <td class="px-6 py-4 text-center">
                                           <a href="{{ url_for('clientes') }}"
